// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ChannelValueExample ChannelValueExample renders examples correctly 1`] = `
Array [
  <div
    className="makeStyles-componentContainer-2"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-1 MuiTypography-body1"
    >
      Basic Usage
    </p>
    <span
      className="makeStyles-root-4 makeStyles-root-9"
      data-test="wrapper"
    >
      <h6
        className="MuiTypography-root makeStyles-text-6 makeStyles-value-8 MuiTypography-h6 MuiTypography-colorInherit"
        data-test="value"
      >
        123
      </h6>
    </span>
  </div>,
  <div
    className="makeStyles-componentContainer-2"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-1 MuiTypography-body1"
    >
      w/ Units
    </p>
    <span
      className="makeStyles-root-4 makeStyles-root-10"
      data-test="wrapper"
    >
      <h6
        className="MuiTypography-root makeStyles-text-6 makeStyles-value-8 MuiTypography-h6 MuiTypography-colorInherit"
        data-test="value"
      >
        123
      </h6>
      <h6
        className="MuiTypography-root makeStyles-text-6 makeStyles-units-7 MuiTypography-h6 MuiTypography-colorInherit"
        data-test="units"
      >
        hz
      </h6>
    </span>
  </div>,
  <div
    className="makeStyles-componentContainer-2"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-1 MuiTypography-body1"
    >
      w/ Icon
    </p>
    <span
      className="makeStyles-root-4 makeStyles-root-11"
      data-test="wrapper"
    >
      <span
        className="makeStyles-icon-5"
        data-test="icon"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          color="#ca3c3d"
          focusable="false"
          style={
            Object {
              "display": "block",
              "fontSize": "inherit",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
          />
        </svg>
      </span>
      <h6
        className="MuiTypography-root makeStyles-text-6 makeStyles-value-8 MuiTypography-h6 MuiTypography-colorInherit"
        data-test="value"
      >
        123
      </h6>
      <h6
        className="MuiTypography-root makeStyles-text-6 makeStyles-units-7 MuiTypography-h6 MuiTypography-colorInherit"
        data-test="units"
      >
        hz
      </h6>
    </span>
  </div>,
  <div
    className="makeStyles-componentContainer-2"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-1 MuiTypography-body1"
    >
      w/ Custom Font Size
    </p>
    <span
      className="makeStyles-root-4 makeStyles-root-12"
      data-test="wrapper"
    >
      <span
        className="makeStyles-icon-5"
        data-test="icon"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          color="#ca3c3d"
          focusable="false"
          style={
            Object {
              "display": "block",
              "fontSize": "inherit",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
          />
        </svg>
      </span>
      <h6
        className="MuiTypography-root makeStyles-text-6 makeStyles-value-8 MuiTypography-h6 MuiTypography-colorInherit"
        data-test="value"
      >
        123
      </h6>
      <h6
        className="MuiTypography-root makeStyles-text-6 makeStyles-units-7 MuiTypography-h6 MuiTypography-colorInherit"
        data-test="units"
      >
        hz
      </h6>
    </span>
  </div>,
]
`;

exports[`Component: EmptyStateExample EmptyStateExample renders examples correctly 1`] = `
Array [
  <div
    className="makeStyles-container-13"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-14 MuiTypography-body1"
    >
      Basic Usage
    </p>
    <div
      className="makeStyles-root-16"
      data-test="frame"
    >
      <div
        className="makeStyles-icon-17"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C8.14 2 5 5.14 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.86-3.14-7-7-7zm.88 13.75h-1.75V14h1.75v1.75zm0-2.87h-1.75c0-2.84 2.62-2.62 2.62-4.38 0-.96-.79-1.75-1.75-1.75s-1.75.79-1.75 1.75H8.5C8.5 6.57 10.07 5 12 5s3.5 1.57 3.5 3.5c0 2.19-2.62 2.41-2.62 4.38z"
          />
        </svg>
      </div>
      <h6
        className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
      >
        Location Unknown
      </h6>
    </div>
  </div>,
  <div
    className="makeStyles-container-13"
  >
    <p
      className="MuiTypography-root makeStyles-sectionTitle-14 MuiTypography-body1"
    >
      w/ Description
    </p>
    <div
      className="makeStyles-root-16"
      data-test="frame"
    >
      <div
        className="makeStyles-icon-17"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6.5c1.38 0 2.5 1.12 2.5 2.5 0 .74-.33 1.39-.83 1.85l3.63 3.63c.98-1.86 1.7-3.8 1.7-5.48 0-3.87-3.13-7-7-7-1.98 0-3.76.83-5.04 2.15l3.19 3.19c.46-.52 1.11-.84 1.85-.84zm4.37 9.6l-4.63-4.63-.11-.11L3.27 3 2 4.27l3.18 3.18C5.07 7.95 5 8.47 5 9c0 5.25 7 13 7 13s1.67-1.85 3.38-4.35L18.73 21 20 19.73l-3.63-3.63z"
          />
        </svg>
      </div>
      <h6
        className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
      >
        Location Services Disabled
      </h6>
      <h6
        className="MuiTypography-root makeStyles-description-18 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
      >
        Enable Location Services via Settings to receive GPS information
      </h6>
    </div>
  </div>,
  <p
    className="MuiTypography-root makeStyles-sectionTitle-14 MuiTypography-body1"
  >
    w/ Actions
  </p>,
  <div
    className="makeStyles-root-16"
    data-test="frame"
  >
    <div
      className="makeStyles-icon-17"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M4 6h18V4H4c-1.1 0-2 .9-2 2v11H0v3h14v-3H4V6zm19 2h-6c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-1 9h-4v-7h4v7z"
        />
      </svg>
    </div>
    <h6
      className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
    >
      No Devices
    </h6>
    <h6
      className="MuiTypography-root makeStyles-description-18 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
    >
      Check your network connection or add a new device
    </h6>
    <div
      className="makeStyles-actions-19"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
          </span>
          Add Device
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Component: HeroExample HeroExample renders examples correctly 1`] = `
Array [
  <div
    className="makeStyles-exampleRow-20"
  >
    <div
      className="makeStyles-componentContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        Basic Usage
      </p>
      <div
        className="makeStyles-root-23 makeStyles-root-27"
        data-test="wrapper"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <span
          className="makeStyles-icon-24 makeStyles-icon-28"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 8.53l-1.29 4.33h2.61L12 8.53z"
            />
            <path
              d="M12 2a10 10 0 100 20 10 10 0 000-20zm2.55 15l-.73-2.38h-3.64L9.45 17H7.17L10.7 7h2.59l3.54 10h-2.28z"
            />
          </svg>
        </span>
        <span
          className="makeStyles-values-25 makeStyles-values-29"
        />
        <p
          className="MuiTypography-root makeStyles-label-26 MuiTypography-body1 MuiTypography-colorInherit"
        >
          Efficiency
        </p>
      </div>
    </div>
    <div
      className="makeStyles-componentContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        w/ Value and Units
      </p>
      <div
        className="makeStyles-root-23 makeStyles-root-30"
        data-test="wrapper"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <span
          className="makeStyles-icon-24 makeStyles-icon-31"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 12.59h-1.33v2.61h1.38a2 2 0 001.3-.34 1.24 1.24 0 00.41-1c0-.86-.59-1.27-1.76-1.27zm1.15-1.94a1 1 0 00.39-.89.88.88 0 00-.42-.82 2.68 2.68 0 00-1.33-.25h-1.12v2.22h1.23a2.33 2.33 0 001.25-.26z"
            />
            <path
              d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm3 14.18a4.3 4.3 0 01-2.69.77H8.55V7h3.12a6 6 0 013.08.61 2.09 2.09 0 011 1.92 2.42 2.42 0 01-.46 1.47 1.62 1.62 0 01-1.12.69v.07a2.21 2.21 0 011.37.79 2.61 2.61 0 01.46 1.5 2.53 2.53 0 01-1 2.13z"
            />
          </svg>
        </span>
        <span
          className="makeStyles-values-25 makeStyles-values-32"
        >
          <span
            className="makeStyles-root-33 makeStyles-root-38"
            data-test="wrapper"
          >
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-value-37 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="value"
            >
              88
            </h6>
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-units-36 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="units"
            >
              %
            </h6>
          </span>
        </span>
        <p
          className="MuiTypography-root makeStyles-label-26 MuiTypography-body1 MuiTypography-colorInherit"
        >
          Efficiency
        </p>
      </div>
    </div>
  </div>,
  <div
    className="makeStyles-exampleRow-20"
  >
    <div
      className="makeStyles-componentContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        w/ Channel Value Children
      </p>
      <div
        className="makeStyles-root-23 makeStyles-root-39"
        data-test="wrapper"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <span
          className="makeStyles-icon-24 makeStyles-icon-40"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
            <path
              d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
        </span>
        <span
          className="makeStyles-values-25 makeStyles-values-41"
        >
          <span
            className="makeStyles-root-33 makeStyles-root-42"
            data-test="wrapper"
          >
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-value-37 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="value"
            >
              1
            </h6>
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-units-36 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="units"
            >
              h
            </h6>
          </span>
          <span
            className="makeStyles-root-33 makeStyles-root-43"
            data-test="wrapper"
          >
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-value-37 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="value"
            >
              27
            </h6>
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-units-36 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="units"
            >
              m
            </h6>
          </span>
        </span>
        <p
          className="MuiTypography-root makeStyles-label-26 MuiTypography-body1 MuiTypography-colorInherit"
        >
          Efficiency
        </p>
      </div>
    </div>
    <div
      className="makeStyles-componentContainer-22"
    >
      <p
        className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
      >
        w/ Icon Colors
      </p>
      <div
        className="makeStyles-root-23 makeStyles-root-44"
        data-test="wrapper"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <span
          className="makeStyles-icon-24 makeStyles-icon-45"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            color="#ffffff"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M17 17a5 5 0 11-8-4V5a3 3 0 016 0v8a5 5 0 012 4m-6-9v6.17a3 3 0 102 0V8h-2"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="makeStyles-values-25 makeStyles-values-46"
        >
          <span
            className="makeStyles-root-33 makeStyles-root-47"
            data-test="wrapper"
          >
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-value-37 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="value"
            >
              38
            </h6>
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-units-36 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="units"
            >
              °C
            </h6>
          </span>
        </span>
        <p
          className="MuiTypography-root makeStyles-label-26 MuiTypography-body1 MuiTypography-colorInherit"
        >
          Temperature
        </p>
      </div>
    </div>
  </div>,
  <div
    className="makeStyles-componentContainer-22"
  >
    <p
      className="MuiTypography-root makeStyles-label-21 MuiTypography-body2"
    >
      Within a HeroBanner
    </p>
    <div
      className="makeStyles-root-48"
      style={
        Object {
          "border": "solid 1px #eef0f0",
          "borderRadius": 4,
          "width": 376,
        }
      }
    >
      <div
        className="makeStyles-root-23 makeStyles-root-49"
        data-test="wrapper"
      >
        <span
          className="makeStyles-icon-24 makeStyles-icon-50"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 8.53l-1.29 4.33h2.61L12 8.53z"
            />
            <path
              d="M12 2a10 10 0 100 20 10 10 0 000-20zm2.55 15l-.73-2.38h-3.64L9.45 17H7.17L10.7 7h2.59l3.54 10h-2.28z"
            />
          </svg>
        </span>
        <span
          className="makeStyles-values-25 makeStyles-values-51"
        >
          <span
            className="makeStyles-root-33 makeStyles-root-52"
            data-test="wrapper"
          >
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-value-37 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="value"
            >
              95
            </h6>
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-units-36 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="units"
            >
              %
            </h6>
          </span>
        </span>
        <p
          className="MuiTypography-root makeStyles-label-26 MuiTypography-body1 MuiTypography-colorInherit"
        >
          Efficiency
        </p>
      </div>
      <div
        className="makeStyles-root-23 makeStyles-root-53"
        data-test="wrapper"
      >
        <span
          className="makeStyles-icon-24 makeStyles-icon-54"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 12.59h-1.33v2.61h1.38a2 2 0 001.3-.34 1.24 1.24 0 00.41-1c0-.86-.59-1.27-1.76-1.27zm1.15-1.94a1 1 0 00.39-.89.88.88 0 00-.42-.82 2.68 2.68 0 00-1.33-.25h-1.12v2.22h1.23a2.33 2.33 0 001.25-.26z"
            />
            <path
              d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm3 14.18a4.3 4.3 0 01-2.69.77H8.55V7h3.12a6 6 0 013.08.61 2.09 2.09 0 011 1.92 2.42 2.42 0 01-.46 1.47 1.62 1.62 0 01-1.12.69v.07a2.21 2.21 0 011.37.79 2.61 2.61 0 01.46 1.5 2.53 2.53 0 01-1 2.13z"
            />
          </svg>
        </span>
        <span
          className="makeStyles-values-25 makeStyles-values-55"
        >
          <span
            className="makeStyles-root-33 makeStyles-root-56"
            data-test="wrapper"
          >
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-value-37 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="value"
            >
              88
            </h6>
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-units-36 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="units"
            >
              %
            </h6>
          </span>
        </span>
        <p
          className="MuiTypography-root makeStyles-label-26 MuiTypography-body1 MuiTypography-colorInherit"
        >
          Efficiency
        </p>
      </div>
      <div
        className="makeStyles-root-23 makeStyles-root-57"
        data-test="wrapper"
      >
        <span
          className="makeStyles-icon-24 makeStyles-icon-58"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
            <path
              d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
        </span>
        <span
          className="makeStyles-values-25 makeStyles-values-59"
        >
          <span
            className="makeStyles-root-33 makeStyles-root-60"
            data-test="wrapper"
          >
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-value-37 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="value"
            >
              1
            </h6>
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-units-36 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="units"
            >
              h
            </h6>
          </span>
          <span
            className="makeStyles-root-33 makeStyles-root-61"
            data-test="wrapper"
          >
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-value-37 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="value"
            >
              27
            </h6>
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-units-36 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="units"
            >
              m
            </h6>
          </span>
        </span>
        <p
          className="MuiTypography-root makeStyles-label-26 MuiTypography-body1 MuiTypography-colorInherit"
        >
          Efficiency
        </p>
      </div>
      <div
        className="makeStyles-root-23 makeStyles-root-62"
        data-test="wrapper"
      >
        <span
          className="makeStyles-icon-24 makeStyles-icon-63"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            color="#ffffff"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M17 17a5 5 0 11-8-4V5a3 3 0 016 0v8a5 5 0 012 4m-6-9v6.17a3 3 0 102 0V8h-2"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="makeStyles-values-25 makeStyles-values-64"
        >
          <span
            className="makeStyles-root-33 makeStyles-root-65"
            data-test="wrapper"
          >
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-value-37 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="value"
            >
              38
            </h6>
            <h6
              className="MuiTypography-root makeStyles-text-35 makeStyles-units-36 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="units"
            >
              °C
            </h6>
          </span>
        </span>
        <p
          className="MuiTypography-root makeStyles-label-26 MuiTypography-body1 MuiTypography-colorInherit"
        >
          Temperature
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`Component: InfoListItemExample InfoListItemExample renders examples correctly 1`] = `
Array [
  <li
    className="MuiListItem-root makeStyles-root-66 makeStyles-root-79 MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-85"
      data-test="status-stripe"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-67 makeStyles-avatar-80 makeStyles-invisible-68 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiAvatar-fallback"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-82 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-87 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        Basic Usage
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-86 MuiTypography-subtitle2 MuiTypography-noWrap"
        />
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-84 MuiTypography-body2 MuiTypography-noWrap"
        />
      </h6>
    </div>
  </li>,
  <li
    className="MuiListItem-root makeStyles-root-66 makeStyles-root-88 MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-94"
      data-test="status-stripe"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-67 makeStyles-avatar-89 makeStyles-invisible-68 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiAvatar-fallback"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-91 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-96 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        Info List Item
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-95 MuiTypography-subtitle2 MuiTypography-noWrap"
        >
          with a Subtitle
        </p>
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-93 MuiTypography-body2 MuiTypography-noWrap"
        />
      </h6>
    </div>
  </li>,
  <li
    className="MuiListItem-root makeStyles-root-66 makeStyles-root-97 MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-103"
      data-test="status-stripe"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-icon-71 makeStyles-icon-101 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-100 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-105 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        Info List Item
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-104 MuiTypography-subtitle2 MuiTypography-noWrap"
        >
          with an icon
        </p>
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-102 MuiTypography-body2 MuiTypography-noWrap"
        />
      </h6>
    </div>
  </li>,
  <li
    className="MuiListItem-root makeStyles-root-66 makeStyles-root-106 MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-112"
      data-test="status-stripe"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-icon-71 makeStyles-icon-110 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 17a5 5 0 11-8-4V5a3 3 0 016 0v8a5 5 0 012 4m-6-9v6.17a3 3 0 102 0V8h-2"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-109 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-114 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        With an array for subtitle
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-113 MuiTypography-subtitle2 MuiTypography-noWrap"
        >
          <span
            className="makeStyles-root-115 makeStyles-root-120"
            data-test="wrapper"
          >
            <h6
              className="MuiTypography-root makeStyles-text-117 makeStyles-value-119 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="value"
            >
              50
            </h6>
            <h6
              className="MuiTypography-root makeStyles-text-117 makeStyles-units-118 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="units"
            >
              °C
            </h6>
          </span>
          <span
            className="MuiTypography-root makeStyles-separator-74 MuiTypography-body1"
          >
            ·
          </span>
          <span
            className="makeStyles-root-115 makeStyles-root-121"
            data-test="wrapper"
          >
            <h6
              className="MuiTypography-root makeStyles-text-117 makeStyles-value-119 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="value"
            >
              55
            </h6>
            <h6
              className="MuiTypography-root makeStyles-text-117 makeStyles-units-118 MuiTypography-h6 MuiTypography-colorInherit"
              data-test="units"
            >
              °C
            </h6>
          </span>
        </p>
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-111 MuiTypography-body2 MuiTypography-noWrap"
        />
      </h6>
    </div>
  </li>,
  <li
    className="MuiListItem-root makeStyles-root-66 makeStyles-root-122 MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-128"
      data-test="status-stripe"
    />
    <hr
      className="MuiDivider-root makeStyles-divider-69 makeStyles-divider-124"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-67 makeStyles-avatar-123 makeStyles-invisible-68 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiAvatar-fallback"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-125 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-130 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        Info List Item
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-129 MuiTypography-subtitle2 MuiTypography-noWrap"
        >
          with a partial divider
        </p>
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-127 MuiTypography-body2 MuiTypography-noWrap"
        />
      </h6>
    </div>
  </li>,
  <li
    className="MuiListItem-root makeStyles-root-66 makeStyles-root-131 MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-137"
      data-test="status-stripe"
    />
    <hr
      className="MuiDivider-root makeStyles-divider-69 makeStyles-divider-133"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-67 makeStyles-avatar-132 makeStyles-invisible-68 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiAvatar-fallback"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-134 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-139 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        Info List Item
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-138 MuiTypography-subtitle2 MuiTypography-noWrap"
        >
          with a full divider
        </p>
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-136 MuiTypography-body2 MuiTypography-noWrap"
        />
      </h6>
    </div>
  </li>,
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root makeStyles-root-66 makeStyles-root-140 MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-146"
      data-test="status-stripe"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-67 makeStyles-avatar-141 makeStyles-invisible-68 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiAvatar-fallback"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-143 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-148 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        Info List Item
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-147 MuiTypography-subtitle2 MuiTypography-noWrap"
        >
          that is clickable
        </p>
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-145 MuiTypography-body2 MuiTypography-noWrap"
        />
      </h6>
    </div>
  </div>,
  <li
    className="MuiListItem-root makeStyles-root-66 makeStyles-root-149 MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-155"
      data-test="status-stripe"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-67 makeStyles-avatar-150 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 8.53l-1.29 4.33h2.61L12 8.53z"
          />
          <path
            d="M12 2a10 10 0 100 20 10 10 0 000-20zm2.55 15l-.73-2.38h-3.64L9.45 17H7.17L10.7 7h2.59l3.54 10h-2.28z"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-152 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-157 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        Info List Item
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-156 MuiTypography-subtitle2 MuiTypography-noWrap"
        >
          with an avatar
        </p>
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-154 MuiTypography-body2 MuiTypography-noWrap"
        />
      </h6>
    </div>
  </li>,
  <li
    className="MuiListItem-root makeStyles-root-66 makeStyles-root-158 MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-164"
      data-test="status-stripe"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-icon-71 makeStyles-icon-162 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 8C8 10 5.9 16.17 3.82 21.34l1.89.66 1-2.3A4.49 4.49 0 008 20C19 20 22 3 22 3c-1 2-8 2.25-13 3.25S2 11.5 2 13.5a6.22 6.22 0 001.75 3.75C7 8 17 8 17 8z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-161 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-166 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        Info List Item
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-165 MuiTypography-subtitle2 MuiTypography-noWrap"
        >
          with a background color
        </p>
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-163 MuiTypography-body2 MuiTypography-noWrap"
        />
      </h6>
    </div>
  </li>,
  <li
    className="MuiListItem-root makeStyles-root-66 makeStyles-root-167 MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-173"
      data-test="status-stripe"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-icon-71 makeStyles-icon-171 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5a2 2 0 00-2 2v14a2 2 0 002 2h14a2 2 0 002-2V5a2 2 0 00-2-2zm0 14a2 2 0 01-2 2 2 2 0 01-2-2 2 2 0 012-2 2 2 0 012 2zm0-10.5A1.5 1.5 0 0117.5 8h-11A1.5 1.5 0 015 6.5 1.5 1.5 0 016.5 5h11A1.5 1.5 0 0119 6.5z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "marginLeft": 0,
          "marginRight": 16,
        }
      }
    >
      <div>
        8:32 
        <strong>
          AM
        </strong>
      </div>
      <div>
        11/21/21
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-170 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-175 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        Info List Item
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-174 MuiTypography-subtitle2 MuiTypography-noWrap"
        >
          with a left component
        </p>
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-172 MuiTypography-body2 MuiTypography-noWrap"
        />
      </h6>
    </div>
  </li>,
  <li
    className="MuiListItem-root makeStyles-root-66 makeStyles-root-176 MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-182"
      data-test="status-stripe"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-icon-71 makeStyles-icon-180 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5a2 2 0 00-2 2v14a2 2 0 002 2h14a2 2 0 002-2V5a2 2 0 00-2-2zm0 14a2 2 0 01-2 2 2 2 0 01-2-2 2 2 0 012-2 2 2 0 012 2zm0-10.5A1.5 1.5 0 0117.5 8h-11A1.5 1.5 0 015 6.5 1.5 1.5 0 016.5 5h11A1.5 1.5 0 0119 6.5z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-179 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-184 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        Info List Item
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-183 MuiTypography-subtitle2 MuiTypography-noWrap"
        >
          with a right component
        </p>
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-181 MuiTypography-body2 MuiTypography-noWrap"
        />
      </h6>
    </div>
    <div
      className="makeStyles-rightComponent-73"
    >
      <span
        className="makeStyles-root-115 makeStyles-root-185"
        data-test="wrapper"
      >
        <h6
          className="MuiTypography-root makeStyles-text-117 makeStyles-value-119 MuiTypography-h6 MuiTypography-colorInherit"
          data-test="value"
        >
          15
        </h6>
        <h6
          className="MuiTypography-root makeStyles-text-117 makeStyles-units-118 MuiTypography-h6 MuiTypography-colorInherit"
          data-test="units"
        >
          A
        </h6>
      </span>
    </div>
  </li>,
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root makeStyles-root-66 makeStyles-root-186 MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="makeStyles-statusStripe-75 makeStyles-statusStripe-192"
      data-test="status-stripe"
    />
    <hr
      className="MuiDivider-root makeStyles-divider-69 makeStyles-divider-188"
    />
    <div
      className="MuiListItemAvatar-root"
      style={
        Object {
          "minWidth": "unset",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle makeStyles-icon-71 makeStyles-icon-190 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5a2 2 0 00-2 2v14a2 2 0 002 2h14a2 2 0 002-2V5a2 2 0 00-2-2zm0 14a2 2 0 01-2 2 2 2 0 01-2-2 2 2 0 012-2 2 2 0 012 2zm0-10.5A1.5 1.5 0 0117.5 8h-11A1.5 1.5 0 015 6.5 1.5 1.5 0 016.5 5h11A1.5 1.5 0 0119 6.5z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiListItemText-root makeStyles-listItemText-70 makeStyles-listItemText-189 MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root makeStyles-title-77 makeStyles-title-194 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        Info List Item
      </span>
      <h6
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
      >
        <p
          className="MuiTypography-root makeStyles-subtitle-76 makeStyles-subtitle-193 MuiTypography-subtitle2 MuiTypography-noWrap"
        >
          with all properties
        </p>
        <p
          className="MuiTypography-root makeStyles-info-72 makeStyles-info-191 MuiTypography-body2 MuiTypography-noWrap"
        >
          more info...
        </p>
      </h6>
    </div>
  </div>,
]
`;

exports[`Component: ListItemTagExample ListItemTagExample renders examples correctly 1`] = `
Array [
  <div
    className="makeStyles-exampleRow-196"
  >
    <div
      className="makeStyles-componentContainer-198"
    >
      <p
        className="MuiTypography-root makeStyles-label-197 MuiTypography-body2"
      >
        Basic Usage
      </p>
      <span
        className="MuiTypography-root makeStyles-root-199 makeStyles-root-201 makeStyles-noVariant-200 MuiTypography-overline MuiTypography-noWrap MuiTypography-displayInline"
        data-test="list-item-tag"
      >
        active
      </span>
    </div>
    <div
      className="makeStyles-componentContainer-198"
    >
      <p
        className="MuiTypography-root makeStyles-label-197 MuiTypography-body2"
      >
        w/ Custom Colors
      </p>
      <span
        className="MuiTypography-root makeStyles-root-199 makeStyles-root-202 makeStyles-noVariant-200 MuiTypography-overline MuiTypography-noWrap MuiTypography-displayInline"
        data-test="list-item-tag"
      >
        active
      </span>
    </div>
  </div>,
  <div
    className="makeStyles-componentContainer-198"
    style={
      Object {
        "marginTop": 48,
      }
    }
  >
    <p
      className="MuiTypography-root makeStyles-label-197 MuiTypography-body2"
    >
      Within an Info List Item
    </p>
    <li
      className="MuiListItem-root makeStyles-root-203 makeStyles-root-216 MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="makeStyles-statusStripe-212 makeStyles-statusStripe-222"
        data-test="status-stripe"
      />
      <div
        className="MuiListItemAvatar-root"
        style={
          Object {
            "minWidth": "unset",
          }
        }
      >
        <div
          className="MuiAvatar-root MuiAvatar-circle makeStyles-icon-208 makeStyles-icon-220 MuiAvatar-colorDefault"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 15.31L23.31 12 20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69zM12 18V6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
            />
          </svg>
        </div>
      </div>
      <div
        className="MuiListItemText-root makeStyles-listItemText-207 makeStyles-listItemText-219 MuiListItemText-multiline"
      >
        <span
          className="MuiTypography-root makeStyles-title-214 makeStyles-title-224 MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
        >
          Info List Item
        </span>
        <h6
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiTypography-displayBlock"
        >
          <p
            className="MuiTypography-root makeStyles-subtitle-213 makeStyles-subtitle-223 MuiTypography-subtitle2 MuiTypography-noWrap"
          >
            with List Item Tags
          </p>
          <p
            className="MuiTypography-root makeStyles-info-209 makeStyles-info-221 MuiTypography-body2 MuiTypography-noWrap"
          />
        </h6>
      </div>
      <div
        className="makeStyles-rightComponent-210"
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <span
            className="MuiTypography-root makeStyles-root-199 makeStyles-root-225 makeStyles-noVariant-200 MuiTypography-overline MuiTypography-noWrap MuiTypography-displayInline"
            data-test="list-item-tag"
            style={
              Object {
                "marginLeft": 0,
                "marginRight": 16,
              }
            }
          >
            Build Passing
          </span>
          <span
            className="MuiTypography-root makeStyles-root-199 makeStyles-root-226 makeStyles-noVariant-200 MuiTypography-overline MuiTypography-noWrap MuiTypography-displayInline"
            data-test="list-item-tag"
          >
            5 Bugs
          </span>
        </div>
      </div>
    </li>
  </div>,
]
`;

exports[`Component: ThreeLinerExample ThreeLinerExample renders examples correctly 1`] = `
Array [
  <div
    className="makeStyles-root-228 makeStyles-root-232"
  >
    <div
      className="makeStyles-title-229 makeStyles-title-233"
    >
      Three Liner Component
    </div>
    <div
      className="makeStyles-subtitle-230 makeStyles-subtitle-234"
    >
      with basic usage
    </div>
    <div
      className="makeStyles-info-231 makeStyles-info-235"
    >
      ...and a third line
    </div>
  </div>,
  <div
    className="makeStyles-root-228 makeStyles-root-236"
    style={
      Object {
        "marginTop": 32,
      }
    }
  >
    <div
      className="makeStyles-title-229 makeStyles-title-237"
    >
      Three Liner Component
    </div>
    <div
      className="makeStyles-subtitle-230 makeStyles-subtitle-238"
    >
      with custom content
    </div>
    <div
      className="makeStyles-info-231 makeStyles-info-239"
    >
      <span
        className="makeStyles-root-240 makeStyles-root-245"
        data-test="wrapper"
      >
        <span
          className="makeStyles-icon-241"
          data-test="icon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            color="#ca3c3d"
            focusable="false"
            style={
              Object {
                "display": "block",
                "fontSize": "inherit",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
            />
          </svg>
        </span>
        <h6
          className="MuiTypography-root makeStyles-text-242 makeStyles-value-244 MuiTypography-h6 MuiTypography-colorInherit"
          data-test="value"
        >
          123
        </h6>
        <h6
          className="MuiTypography-root makeStyles-text-242 makeStyles-units-243 MuiTypography-h6 MuiTypography-colorInherit"
          data-test="units"
        >
          hz
        </h6>
      </span>
    </div>
  </div>,
]
`;

exports[`Component: UserMenuExample UserMenuExample renders examples correctly 1`] = `
Array [
  <div
    className="makeStyles-exampleRow-246"
  >
    <div
      className="makeStyles-componentContainer-248"
    >
      <p
        className="MuiTypography-root makeStyles-label-247 MuiTypography-body2"
      >
        Basic Usage
      </p>
      <div
        className="makeStyles-root-252"
      >
        <div
          className="MuiAvatar-root makeStyles-avatarRoot-253 MuiAvatar-circle MuiAvatar-colorDefault"
          onClick={[Function]}
        >
          UI
        </div>
      </div>
    </div>
    <div
      className="makeStyles-componentContainer-248"
    >
      <p
        className="MuiTypography-root makeStyles-label-247 MuiTypography-body2"
      >
        w/ Custom Colors
      </p>
      <div
        className="makeStyles-root-252"
      >
        <div
          className="MuiAvatar-root makeStyles-avatarRoot-253 makeStyles-customAvatar-250 MuiAvatar-circle MuiAvatar-colorDefault"
          onClick={[Function]}
        >
          UI
        </div>
      </div>
    </div>
  </div>,
  <div
    className="makeStyles-exampleRow-246"
  >
    <div
      className="makeStyles-componentContainer-248"
    >
      <p
        className="MuiTypography-root makeStyles-label-247 MuiTypography-body2"
      >
        w/ Non-Text Avatar
      </p>
      <div
        className="makeStyles-root-252"
      >
        <div
          className="MuiAvatar-root makeStyles-avatarRoot-253 MuiAvatar-circle MuiAvatar-colorDefault"
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="4.5"
              cy="9.5"
              r="2.5"
            />
            <circle
              cx="9"
              cy="5.5"
              r="2.5"
            />
            <circle
              cx="15"
              cy="5.5"
              r="2.5"
            />
            <circle
              cx="19.5"
              cy="9.5"
              r="2.5"
            />
            <path
              d="M17.34 14.86c-.87-1.02-1.6-1.89-2.48-2.91-.46-.54-1.05-1.08-1.75-1.32-.11-.04-.22-.07-.33-.09-.25-.04-.52-.04-.78-.04s-.53 0-.79.05c-.11.02-.22.05-.33.09-.7.24-1.28.78-1.75 1.32-.87 1.02-1.6 1.89-2.48 2.91-1.31 1.31-2.92 2.76-2.62 4.79.29 1.02 1.02 2.03 2.33 2.32.73.15 3.06-.44 5.54-.44h.18c2.48 0 4.81.58 5.54.44 1.31-.29 2.04-1.31 2.33-2.32.31-2.04-1.3-3.49-2.61-4.8z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="makeStyles-componentContainer-248"
    >
      <p
        className="MuiTypography-root makeStyles-label-247 MuiTypography-body2"
      >
        w/ a Menu Header
      </p>
      <div
        className="makeStyles-root-252"
      >
        <div
          className="MuiAvatar-root makeStyles-avatarRoot-253 MuiAvatar-circle MuiAvatar-colorDefault"
          onClick={[Function]}
        >
          UI
        </div>
      </div>
    </div>
  </div>,
  <div
    style={
      Object {
        "marginTop": 32,
        "width": "100%",
      }
    }
  >
    <header
      className="MuiPaper-root MuiAppBar-root MuiAppBar-positionRelative MuiAppBar-colorPrimary MuiPaper-elevation4"
    >
      <div
        className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
        style={
          Object {
            "height": "4rem",
            "minHeight": "unset",
            "padding": "0 16px",
          }
        }
      >
        <h6
          className="MuiTypography-root MuiTypography-h6"
        >
          UserMenu within a Toolbar
        </h6>
        <div
          className=""
          data-test="spacer-root"
          style={
            Object {
              "flex": "1 1 0px",
              "height": "auto",
              "width": "auto",
            }
          }
        />
        <div
          className="makeStyles-root-252"
        >
          <div
            className="MuiAvatar-root makeStyles-avatarRoot-253 MuiAvatar-circle MuiAvatar-colorDefault"
            onClick={[Function]}
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiAvatar-fallback"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
          </div>
        </div>
      </div>
    </header>
  </div>,
]
`;
